more rake website tweaks

--- a/RakeFile
+++ b/RakeFile
@@ -98,13 +98,9 @@ end
 
 def output_markup file
   out = "<pre id=\"#{class_for(file)}_output\" data-timestamp=\"#{Time.new.inspect}\" style=\"font-size: 1.1em !important; color: #5ce632; background-color: #1b2426; padding: 10px;\">"
-  output =  CGI::escapeHTML(`nspecrunner/bin/debug/nspecrunner.exe samplespecs/bin/debug/samplespecs.dll #{class_for(file)}`.strip)
+  output =  `nspecrunner/bin/debug/nspecrunner.exe samplespecs/bin/debug/samplespecs.dll #{class_for(file)}`.strip#.gsub("\ï\»\¿","")
   output.each_line do |line|
-    if line.length < 93
-      out += line
-    else
-      out += line[0..93-line.length] + "...\n"
-    end
+      out += CGI::escapeHTML(line.rstrip[0..94-line.length] + "...\n")
   end
   out += '</pre>'
 end
