--- a/RakeFile
+++ b/RakeFile
@@ -19,7 +19,8 @@ end
 
 task :commit => :pull do
   `git add -A .`
-  `"git commit -m "#{ENV['m']}"`
+  `git commit -m "#{ENV['m']}`
+  `git push`
 end
 
 task :all => [:pull,:nuget,:commit,:website]
