--- a/nspec.nuspec
+++ b/nspec.nuspec
@@ -2,8 +2,8 @@
 <package xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <id>nspec</id>
-    <version>0.9.21</version>
-    <iconUrl>http://nspecdriven.net/themes/contoso/content/images/logo.png</iconUrl>
+    <version>0.9.22</version>
+    <iconUrl>http://nspec.org/themes/contoso/content/images/logo.png</iconUrl>
     <licenseUrl>https://github.com/mattflo/NSpec/blob/master/license.txt</licenseUrl>
     <authors>Matt Florence, Amir Rajan</authors>
     <owners>Matt Florence, Amir Rajan</owners>
