--- a/SampleSpecs/SampleSpecs.csproj
+++ b/SampleSpecs/SampleSpecs.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Demo\prime_kata.cs" />
     <Compile Include="Demo\todo_example.cs" />
     <Compile Include="Model\TicTacToeGame.cs" />
+    <Compile Include="Model\VendingMachine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\User.cs" />
     <Compile Include="Model\Car.cs" />
@@ -58,12 +59,14 @@
     <Compile Include="WebSite\describe_class_level_before.cs" />
     <Compile Include="Demo\decribe_TicTacToeGame.cs" />
     <Compile Include="Demo\describe_car.cs" />
+    <Compile Include="WebSite\describe_expected_exception.cs" />
     <Compile Include="WebSite\describe_helpers.cs" />
     <Compile Include="WebSite\describe_Math.cs" />
     <Compile Include="WebSite\describe_pending.cs" />
     <Compile Include="WebSite\describe_PrimeFactors.cs" />
     <Compile Include="WebSite\describe_specifications.cs" />
     <Compile Include="Demo\multiple_befores.cs" />
+    <Compile Include="Demo\describe_VendingMachine.cs" />
     <Compile Include="WebSite\my_first_spec.cs" />
     <Compile Include="WebSite\describe_contexts.cs" />
     <Compile Include="Model\PrimeFactors.cs" />
