--- a/nspec.nuspec
+++ b/nspec.nuspec
@@ -2,7 +2,7 @@
 <package xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <id>nspec</id>
-    <version>0.9.22</version>
+    <version>0.9.24</version>
     <iconUrl>http://nspec.org/themes/contoso/content/images/logo.png</iconUrl>
     <licenseUrl>https://github.com/mattflo/NSpec/blob/master/license.txt</licenseUrl>
     <authors>Matt Florence, Amir Rajan</authors>
@@ -11,7 +11,7 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>NSpec is a BDD unit testing framework using the context/specification style built for .NET developers. NSpec is heavily inspired by RSpec and built upon the NUnit assertion library.</description>
     <language>en-US</language>
-    <tags>testing, bdd, tdd</tags>
+    <tags>testing bdd tdd</tags>
   </metadata>
   <files>
     <file src="NSpecRunner/bin/Debug/*.*" target="tools/"/>
