website sample updates

--- a/SampleSpecs/SampleSpecs.csproj
+++ b/SampleSpecs/SampleSpecs.csproj
@@ -56,12 +56,12 @@
     <Compile Include="Model\Car.cs" />
     <Compile Include="Model\Account.cs" />
     <Compile Include="WebSite\describe_act.cs" />
-    <Compile Include="WebSite\describe_class_level_before.cs" />
+    <Compile Include="WebSite\describe_class_level.cs" />
     <Compile Include="Demo\decribe_TicTacToeGame.cs" />
     <Compile Include="Demo\describe_car.cs" />
     <Compile Include="WebSite\describe_expected_exception.cs" />
     <Compile Include="WebSite\describe_helpers.cs" />
-    <Compile Include="WebSite\describe_inheritance.cs" />
+    <Compile Include="WebSite\given_the_sequence_continues_with_2.cs" />
     <Compile Include="WebSite\describe_Math.cs" />
     <Compile Include="WebSite\describe_pending.cs" />
     <Compile Include="WebSite\describe_PrimeFactors.cs" />
