changed act example to batman sounds as text

--- a/SampleSpecs/SampleSpecs.csproj
+++ b/SampleSpecs/SampleSpecs.csproj
@@ -55,7 +55,7 @@
     <Compile Include="Model\User.cs" />
     <Compile Include="Model\Car.cs" />
     <Compile Include="Model\Account.cs" />
-    <Compile Include="WebSite\describe_act.cs" />
+    <Compile Include="WebSite\describe_batman_sound_effects_as_text.cs" />
     <Compile Include="WebSite\describe_class_level.cs" />
     <Compile Include="Demo\decribe_TicTacToeGame.cs" />
     <Compile Include="Demo\describe_car.cs" />
