--- a/nspec.nuspec
+++ b/nspec.nuspec
@@ -7,9 +7,9 @@
     <licenseUrl>https://github.com/mattflo/NSpec/blob/master/license.txt</licenseUrl>
     <authors>Matt Florence, Amir Rajan</authors>
     <owners>Matt Florence, Amir Rajan</owners>
-    <projectUrl>http://www.nspecdriven.net</projectUrl>
+    <projectUrl>http://www.nspec.org</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>NSpec is a BDD unit testing framework using the context/specification style built for .NET developers. NSpec is heavily inspired by RSpec and built upon the NUnit assertion library.</description>
+    <description>NSpec is a BDD framework for .NET of the xSpec (context/specification) flavor. NSpec is intended to be used to drive development through specifying behavior at the unit level. NSpec is heavily inspired by RSpec and built upon the NUnit assertion library.</description>
     <language>en-US</language>
     <tags>testing bdd tdd</tags>
   </metadata>
