--- a/SampleSpecs/SampleSpecs.csproj
+++ b/SampleSpecs/SampleSpecs.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Demo\before_each_on_the_class_level.cs" />
     <Compile Include="Demo\describe_a_finished_TicTacToeGame.cs" />
     <Compile Include="Demo\describe_Extensions.cs" />
+    <Compile Include="Demo\describe_shoulds.cs" />
     <Compile Include="Demo\inherited_spec_class.cs" />
     <Compile Include="Demo\prime_kata.cs" />
     <Compile Include="Demo\todo_example.cs" />
