--- a/SampleSpecs/SampleSpecs.csproj
+++ b/SampleSpecs/SampleSpecs.csproj
@@ -42,8 +42,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bug\given_a_subcontext_that_fails.cs" />
-    <Compile Include="Compare\NUnit\Describe_StockItem.cs" />
-    <Compile Include="Compare\NUnit\Describe_VendingMachine.cs" />
+    <Compile Include="Compare\NUnit\Describe_VendingMachine\given_A1_has_been_registered.cs" />
+    <Compile Include="Compare\NUnit\Describe_VendingMachine\given_doritos_are_registerd_in_A1_for_50_cents.cs" />
     <Compile Include="Compare\NUnit\Extensions.cs" />
     <Compile Include="Compare\NUnit\Item.cs" />
     <Compile Include="Compare\NUnit\SlotAlreadyTakenException.cs" />
