--- a/RakeFile
+++ b/RakeFile
@@ -21,6 +21,7 @@ end
 task :commit => :pull do
   `git add -A .`
   `git commit -m "#{ENV['m']}`
+  `git push`
   `git tag -a v#{get_version_node.text} -m "#{get_version_node.text}" HEAD`
   `git push --tags`
 end
