--- a/NSpecSpecs/NSpecSpecs.csproj
+++ b/NSpecSpecs/NSpecSpecs.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="describe_RegexSpecFinder.cs" />
     <Compile Include="WhenRunningSpecs\describe_xdescribe.cs" />
     <Compile Include="WhenRunningSpecs\describe_class_level_before.cs" />
     <Compile Include="WhenRunningSpecs\describe_xcontext.cs" />
@@ -71,7 +72,7 @@
     <Compile Include="when_building_method_contexts.cs" />
     <Compile Include="WhenRunningSpecs\describe_method_level_befores.cs" />
     <Compile Include="when_counting_failures.cs" />
-    <Compile Include="when_finding_specs.cs" />
+    <Compile Include="describe_SpecFinder.cs" />
     <Compile Include="when_creating_before_contexts_for_classes.cs" />
     <Compile Include="Formatting\describe_ConsoleFormatter.cs" />
     <Compile Include="when_parsing_expressions.cs" />
