--- a/NSpec/NSpec.csproj
+++ b/NSpec/NSpec.csproj
@@ -55,7 +55,7 @@
     <Compile Include="Domain\MethodContext.cs" />
     <Compile Include="Domain\PendingExampleException.cs" />
     <Compile Include="Domain\ExceptionNotThrown.cs" />
-    <Compile Include="Domain\UnderScore.cs" />
+    <Compile Include="Domain\DefaultConvention.cs" />
     <Compile Include="Each.cs" />
     <Compile Include="Domain\ActionIndexer.cs" />
     <Compile Include="nspec.cs" />
