--- a/NSpecSpecs/NSpecSpecs.csproj
+++ b/NSpecSpecs/NSpecSpecs.csproj
@@ -47,7 +47,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="describe_ClassContext.cs" />
     <Compile Include="describe_Conventions.cs" />
     <Compile Include="describe_RunningSpecs\describe_method_level_examples.cs" />
     <Compile Include="describe_RunningSpecs\describe_xdescribe.cs" />
@@ -61,7 +60,7 @@
     <Compile Include="describe_RunningSpecs\describe_implicit_befores.cs" />
     <Compile Include="describe_RunningSpecs\describe_todo.cs" />
     <Compile Include="describe_ContextCollection.cs" />
-    <Compile Include="describe_UnderScore.cs" />
+    <Compile Include="describe_DefaultConvention.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="describe_RunningSpecs\when_act_contains_exception.cs" />
     <Compile Include="describe_RunningSpecs\when_after_contains_exception.cs" />
