re-added underscore conventions with ignore case, moved conventions out of NSpec.Domain so that others can more easily boot strap.  made nspec methods public virtual so that people can extend it

--- a/NSpec/NSpec.csproj
+++ b/NSpec/NSpec.csproj
@@ -50,11 +50,11 @@
     <Compile Include="Domain\ContextCollection.cs" />
     <Compile Include="Domain\ContextRunner.cs" />
     <Compile Include="Domain\ContextBuilder.cs" />
-    <Compile Include="Domain\Conventions.cs" />
+    <Compile Include="Conventions.cs" />
     <Compile Include="Domain\Extensions\DomainExtensions.cs" />
     <Compile Include="Domain\MethodContext.cs" />
     <Compile Include="Domain\ExceptionNotThrown.cs" />
-    <Compile Include="Domain\DefaultConvention.cs" />
+    <Compile Include="DefaultConventions.cs" />
     <Compile Include="Each.cs" />
     <Compile Include="Domain\ActionIndexer.cs" />
     <Compile Include="nspec.cs" />
