--- a/NSpec/NSpec.csproj
+++ b/NSpec/NSpec.csproj
@@ -38,6 +38,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
@@ -46,11 +47,13 @@
   <ItemGroup>
     <Compile Include="Domain\BeforeFinder.cs" />
     <Compile Include="Domain\ClassContext.cs" />
-    <Compile Include="Domain\ConsoleFormatter.cs" />
+    <Compile Include="Domain\Formatters\ConsoleFormatter.cs" />
     <Compile Include="Domain\ContextCollection.cs" />
     <Compile Include="Domain\ContextRunner.cs" />
     <Compile Include="Domain\ContextBuilder.cs" />
     <Compile Include="Conventions.cs" />
+    <Compile Include="Domain\Formatters\IFormatter.cs" />
+    <Compile Include="Domain\Formatters\TiddlyWikiFormatter.cs" />
     <Compile Include="Domain\Extensions\DomainExtensions.cs" />
     <Compile Include="Domain\MethodContext.cs" />
     <Compile Include="Domain\ExceptionNotThrown.cs" />
@@ -66,7 +69,11 @@
     <Compile Include="Domain\SpecFinder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Domain\Formatters\Templates\TiddlyWiki_Template.html">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
