--- a/NSpec.GallioAdapter.TestResources/NSpec.GallioAdapter.TestResources.csproj
+++ b/NSpec.GallioAdapter.TestResources/NSpec.GallioAdapter.TestResources.csproj
@@ -5,14 +5,13 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{AB994BF6-32A4-456D-8BE1-552ADF2011C6}</ProjectGuid>
+    <ProjectGuid>{34EB6E39-D359-4EB8-BDA0-D7E222588EFE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NSpec.GallioAdapter.TestResources</RootNamespace>
-    <AssemblyName>NSpec.GallioAdapter.TestResources</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <RootNamespace>NSpecGallioAdapterTestResources</RootNamespace>
+    <AssemblyName>NSpecGallioAdapterTestResources</AssemblyName>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
