--- a/nspec.nuspec
+++ b/nspec.nuspec
@@ -2,7 +2,7 @@
 <package xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <id>nspec</id>
-    <version>0.9.46</version>
+    <version>0.9.48</version>
     <iconUrl>http://nspec.org/themes/contoso/content/images/logo.png</iconUrl>
     <licenseUrl>https://github.com/mattflo/NSpec/blob/master/license.txt</licenseUrl>
     <authors>Matt Florence, Amir Rajan</authors>
@@ -17,5 +17,6 @@
     <file src="NSpecRunner/bin/Debug/*.*" target="tools/"/>
     <file src="NSpec/bin/debug/NSpec.dll" target="lib/NSpec.dll"/>
     <file src="NSpec/bin/debug/nunit.framework.dll" target="lib/nunit.framework.dll"/>
+    <file src="SampleSpecs/DebuggerShim.cs" target="content/DebuggerShim.cs"/>
   </files>
 </package>
