--- a/TDNETRunner/TDNETRunner.csproj
+++ b/TDNETRunner/TDNETRunner.csproj
@@ -5,14 +5,13 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{25B0B581-D3DD-4FE8-B7E9-DA6F86622E17}</ProjectGuid>
+    <ProjectGuid>{CF6C7612-7CBD-4259-AC3D-045C310BC37E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>NSpec.GallioAdapter</RootNamespace>
-    <AssemblyName>NSpec.GallioAdapter</AssemblyName>
-    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
+    <RootNamespace>TDNETRunner</RootNamespace>
+    <AssemblyName>TDNETRunner</AssemblyName>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -32,10 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Gallio, Version=3.2.0.0, Culture=neutral, PublicKeyToken=eb9cfa67ee6ab36e, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\libs\Gallio.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,17 +38,14 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="TestDriven.Framework">
+      <HintPath>..\libs\TestDriven.Framework.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Model\NSpecAssemblyTest.cs" />
-    <Compile Include="Model\NSpecContextTest.cs" />
-    <Compile Include="Model\NSpecExampleTest.cs" />
-    <Compile Include="Model\NSpecTest.cs" />
-    <Compile Include="Services\NSpecController.cs" />
-    <Compile Include="Services\NSpecTestDriver.cs" />
-    <Compile Include="Services\NSpecTestExplorer.cs" />
-    <Compile Include="NSpecTestFramework.cs" />
+    <Compile Include="TDNetRunListener.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TDNetNSpecRunner.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NSpec\NSpec.csproj">
@@ -61,17 +53,7 @@
       <Name>NSpec</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <None Include="NSpec.GallioAdapter.plugin">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <SubType>Designer</SubType>
-    </None>
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
-  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
