--- a/NSpec.TDNetRunner/NSpec.TDNetRunner.csproj
+++ b/NSpec.TDNetRunner/NSpec.TDNetRunner.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{CF6C7612-7CBD-4259-AC3D-045C310BC37E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TDNETRunner</RootNamespace>
-    <AssemblyName>TDNETRunner</AssemblyName>
+    <RootNamespace>NSpec.TDNetRunner</RootNamespace>
+    <AssemblyName>NSpec.TDNetRunner</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -52,6 +52,9 @@
       <Project>{36862628-1F0C-4EA5-8963-C79BAF958DC1}</Project>
       <Name>NSpec</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="InstallTDNetRunner.bat" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
