afters wrapped in try catch

--- a/NSpecSpecs/NSpecSpecs.csproj
+++ b/NSpecSpecs/NSpecSpecs.csproj
@@ -50,6 +50,7 @@
     <Compile Include="ClassContextBug\NestContextsTests.cs" />
     <Compile Include="ClassContextBug\NestedContexts.cs" />
     <Compile Include="describe_Conventions.cs" />
+    <Compile Include="describe_RunningSpecs\describe_class_level_after.cs" />
     <Compile Include="describe_RunningSpecs\describe_method_level_examples.cs" />
     <Compile Include="describe_RunningSpecs\describe_xdescribe.cs" />
     <Compile Include="describe_RunningSpecs\describe_class_level_before.cs" />
