copying install bat to output dir

--- a/NSpec.TDNetRunner/NSpec.TDNetRunner.csproj
+++ b/NSpec.TDNetRunner/NSpec.TDNetRunner.csproj
@@ -54,7 +54,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="InstallTDNetRunner.bat" />
+    <Content Include="InstallTDNetRunner.bat">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
