--- a/NSpecSpecs/NSpecSpecs.csproj
+++ b/NSpecSpecs/NSpecSpecs.csproj
@@ -50,6 +50,8 @@
     <Compile Include="ClassContextBug\NestContextsTests.cs" />
     <Compile Include="ClassContextBug\NestedContexts.cs" />
     <Compile Include="describe_Conventions.cs" />
+    <Compile Include="describe_RunningSpecs\describe_context_level_tagging.cs" />
+    <Compile Include="describe_RunningSpecs\describe_example_level_tagging.cs" />
     <Compile Include="describe_RunningSpecs\describe_expected_exception_in_act.cs" />
     <Compile Include="describe_RunningSpecs\describe_class_level_after.cs" />
     <Compile Include="describe_RunningSpecs\describe_method_level_examples.cs" />
