Add support for runner to use tags filter passed on command line.

--- a/NSpec/NSpec.csproj
+++ b/NSpec/NSpec.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Domain\MethodContext.cs" />
     <Compile Include="Domain\ExceptionNotThrown.cs" />
     <Compile Include="DefaultConventions.cs" />
+    <Compile Include="Domain\Tags.cs" />
     <Compile Include="Each.cs" />
     <Compile Include="Domain\ActionIndexer.cs" />
     <Compile Include="nspec.cs" />
