--- a/SampleSpecs/SampleSpecs.csproj
+++ b/SampleSpecs/SampleSpecs.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Demo\describe_a_finished_TicTacToeGame.cs" />
     <Compile Include="Demo\describe_Extensions.cs" />
     <Compile Include="Demo\describe_shoulds.cs" />
+    <Compile Include="Demo\describe_tags.cs" />
     <Compile Include="Demo\inherited_spec_class.cs" />
     <Compile Include="Demo\prime_kata.cs" />
     <Compile Include="Demo\todo_example.cs" />
