--- a/NSpecSpecs/NSpecSpecs.csproj
+++ b/NSpecSpecs/NSpecSpecs.csproj
@@ -47,7 +47,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AssertionExtensions.cs" />
     <Compile Include="ClassContextBug\NestContextsTests.cs" />
     <Compile Include="ClassContextBug\NestedContexts.cs" />
     <Compile Include="describe_Conventions.cs" />
@@ -71,7 +70,7 @@
     <Compile Include="describe_ContextCollection.cs" />
     <Compile Include="describe_DefaultConventions.cs" />
     <Compile Include="describe_RunningSpecs\when_method_level_before_contains_exception.cs" />
-    <Compile Include="describe_RunningSpecs\describe_parsing_tags.cs" />
+    <Compile Include="describe_Tags.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="describe_RunningSpecs\when_act_contains_exception.cs" />
     <Compile Include="describe_RunningSpecs\when_after_contains_exception.cs" />
