--- a/RakeFile
+++ b/RakeFile
@@ -7,6 +7,9 @@ task :build do
   sh 'C:\Windows\Microsoft.NET\Framework\v4.0.30319\MSBuild.exe NSpec.sln'
 end
 
+desc 'default rake task builds and runs unit tests'
+task :default => [:build, :spec]
+
 desc 'run specs'
 task :spec => :build do
   sh '"C:\program files (x86)\nunit 2.5.9\bin\net-2.0\nunit-console-x86.exe" NSpecSpecs/bin/Debug/NSpecSpecs.dll'
@@ -80,8 +83,17 @@ end
 desc 'create and upload a nuget package. requires deploy.bat with secure hash to be in your path. autoincrements version number.'
 task :nuget => :spec do
   Dir['nspec*{nupkg}'].each {|f| File.delete(f)}
-  sh 'nuget.exe pack nspec.nuspec'
+  create_nuget_package
   sh "deployNuget.bat #{Dir['*{nupkg}'][0]}"
+end
+
+desc 'creates the nuget package without incrementing the version number'
+task :nuget_pack do
+  create_nuget_package
+end
+
+def create_nuget_package
+  sh 'nuget.exe pack nspec.nuspec'
 end
 
 def get_version_node
