Rake now updates GallioAdapter plugin informations. Gallio library updated to 3.3.0.0.

--- a/RakeFile
+++ b/RakeFile
@@ -44,10 +44,29 @@ task :zip do
   }
 end
 
-task :version => :bump_version do
+task :version => [:bump_version, :version_gallio_adapter] do
   lines = ["[assembly: AssemblyVersion(\"#{get_version_node.text}\")]",
            "[assembly: AssemblyFileVersion(\"#{get_version_node.text}\")]"]
   Dir['NSpec*/**/AssemblyInfo.cs'].each {|f| update_version f,lines}
+end
+
+desc 'update GallioAdapter plugin version'
+task :version_gallio_adapter do
+  file = 'NSpec.GallioAdapter/NSpec.GallioAdapter.plugin'
+
+  version = get_version_node.text
+  if version.count('.') == 2
+    version = version + '.0'
+  end
+  
+  xml = Nokogiri::XML(File.read file)
+  
+  xml.root.xpath('//xmlns:assembly[@codeBase="NSpec.dll"]')[0].set_attribute('fullName', "NSpec, Version=#{version}, Culture=neutral, PublicKeyToken=null")
+  xml.root.xpath('//xmlns:assembly[@codeBase="NSpec.GallioAdapter.dll"]')[0].set_attribute('fullName', "NSpec.GallioAdapter, Version=#{version}, Culture=neutral, PublicKeyToken=null")
+
+  xml.root.xpath('//xmlns:version').each {|n| n.inner_html = version}
+  xml.root.xpath('//xmlns:component[@componentId="NSpec.TestFramework"]/xmlns:traits/xmlns:frameworkAssemblies')[0].inner_html = "NSpec, Version=#{version}"
+  File.open(file, 'w') {|f| f.write(xml.to_xml) }
 end
 
 def update_version file, version_lines
