SharedAssemblyInfo.cs to clean up the version bump process

--- a/NSpec/NSpec.csproj
+++ b/NSpec/NSpec.csproj
@@ -45,6 +45,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SharedAssemblyInfo.cs">
+      <Link>Properties\SharedAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Domain\BeforeFinder.cs" />
     <Compile Include="Domain\ClassContext.cs" />
     <Compile Include="Domain\ExampleFailureException.cs" />
