--- a/NSpec.GallioAdapter/NSpec.GallioAdapter.csproj
+++ b/NSpec.GallioAdapter/NSpec.GallioAdapter.csproj
@@ -44,6 +44,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\SharedAssemblyInfo.cs">
+      <Link>Properties\SharedAssemblyInfo.cs</Link>
+    </Compile>
     <Compile Include="Model\NSpecAssemblyTest.cs" />
     <Compile Include="Model\NSpecContextTest.cs" />
     <Compile Include="Model\NSpecExampleTest.cs" />
